codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_tmp_clear_slash_command.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
• Session temporary clear complete: removed 1 path(s), preserved 0 path(s), removed 0 session(s). All entries in the current session were removed, including manual-retention entries.
