codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_tmp_disabled_slash_command.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
• Session temporary storage is disabled. Add `[session_tmp].enabled = true` to config.toml to enable it. Usage: /tmp [status|list|clean|clear|reap [days|--force]]
