codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_tmp_reap_force_slash_command.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
• Session temporary stale-session reap complete: removed 1 path(s), preserved 0 path(s), removed 1 session(s). All sessions were considered regardless of age; the current session, sessions with a fresh lease or held lock, invalid records, and unsafe entries were preserved. Reaping uses managed locks and leases to protect the current and genuinely live sessions.
■ Usage: /tmp reap [days|--force]
