codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_live_only.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: status_line_popup_snapshot(&mut chat)
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search

› [x] Use theme colors      Apply colors from the active /theme
  ───────────────────────
  [x] project-name          Project name (omitted when unavailable)
  [x] git-branch            Current Git branch (omitted when unavailable)
  [x] thread-title          Current thread title, or thread identifier when unnamed
  [ ] model                 Current model, or Lead/Worker profiles in Team mode
  [ ] model-with-reasoning  Current model with reasoning, or Lead/Worker profiles in Team mode
  [ ] reasoning             Current reasoning level, or Lead/Worker levels in Team mode
↓
  preview-live-root · feature/live-preview-branch · Live preview thread
  space toggle · ←/→ reorder · enter save · esc cancel
