codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__team_model_status_line_narrow.snap
---
source: tui/src/chatwidget/tests/model_display_name_tests.rs
expression: "render_status_snapshot(&mut chat, 40)"
---
"                                        "
"                                        "
"› Ask Codex to do anything              "
"                                        "
"  Lead: GPT-6 Astra xhigh · Worker defa…"
